@@ -15,7 +15,6 @@
  */
 package com.android.adservices.service.measurement.registration;
 
-import static com.android.adservices.service.measurement.SystemHealthParams.MAX_TRIGGER_REGISTERS_PER_DESTINATION;
 import static com.android.adservices.service.measurement.attribution.TriggerContentProvider.TRIGGER_URI;
 
 import static org.junit.Assert.assertEquals;
@@ -23,7 +22,7 @@ import static org.junit.Assert.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyShort;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
@@ -42,7 +41,6 @@ import android.database.Cursor;
 import android.database.sqlite.SQLiteDatabase;
 import android.net.Uri;
 import android.os.RemoteException;
-import android.util.Pair;
 
 import androidx.test.core.app.ApplicationProvider;
 
@@ -61,6 +59,7 @@ import com.android.adservices.service.measurement.AsyncRegistrationFixture;
 import com.android.adservices.service.measurement.Attribution;
 import com.android.adservices.service.measurement.EventReport;
 import com.android.adservices.service.measurement.EventSurfaceType;
+import com.android.adservices.service.measurement.KeyValueData;
 import com.android.adservices.service.measurement.Source;
 import com.android.adservices.service.measurement.SourceFixture;
 import com.android.adservices.service.measurement.SystemHealthParams;
@@ -93,6 +92,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -153,9 +153,6 @@ public class AsyncRegistrationQueueRunnerTest {
     private AsyncSourceFetcher mAsyncSourceFetcher;
     private AsyncTriggerFetcher mAsyncTriggerFetcher;
     private Source mMockedSource;
-
-    @Mock HttpsURLConnection mUrlConnection1;
-    @Mock HttpsURLConnection mUrlConnection2;
     @Mock private IMeasurementDao mMeasurementDao;
     @Mock private Trigger mMockedTrigger;
     @Mock private ITransaction mTransaction;
@@ -194,31 +191,37 @@ public class AsyncRegistrationQueueRunnerTest {
     @After
     public void cleanup() {
         SQLiteDatabase db = DbTestUtil.getMeasurementDbHelperForTest().getWritableDatabase();
-        SQLiteDatabase enrollmentDb = DbTestUtil.getDbHelperForTest().getWritableDatabase();
-        enrollmentDb.delete("enrollment_data", null, null);
         emptyTables(db);
         mStaticMockSession.finishMocking();
     }
 
     @Before
     public void before() throws RemoteException {
+        MockitoAnnotations.initMocks(this);
         mStaticMockSession =
                 ExtendedMockito.mockitoSession()
                         .spyStatic(FlagsFactory.class)
                         .strictness(Strictness.WARN)
                         .startMocking();
-        ExtendedMockito.doReturn(FlagsFactory.getFlagsForTest()).when(FlagsFactory::getFlags);
+        ExtendedMockito.doReturn(mFlags).when(FlagsFactory::getFlags);
 
         mAsyncSourceFetcher = spy(new AsyncSourceFetcher(sDefaultContext));
         mAsyncTriggerFetcher = spy(new AsyncTriggerFetcher(sDefaultContext));
         mMockedSource = spy(SourceFixture.getValidSource());
-        MockitoAnnotations.initMocks(this);
+
         when(mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(any()))
                 .thenReturn(getEnrollment(DEFAULT_ENROLLMENT_ID));
         when(mContentResolver.acquireContentProviderClient(TRIGGER_URI))
                 .thenReturn(mMockContentProviderClient);
         when(mMockContentProviderClient.insert(any(), any())).thenReturn(TRIGGER_URI);
+        when(mFlags.getMeasurementMaxRegistrationRedirects()).thenReturn(20);
+        when(mFlags.getMeasurementMaxRegistrationsPerJobInvocation()).thenReturn(1);
+        when(mFlags.getMeasurementMaxRetriesPerRegistrationRequest()).thenReturn(5);
         when(mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()).thenReturn("");
+        when(mFlags.getMeasurementMaxSourcesPerPublisher())
+                .thenReturn(Flags.MEASUREMENT_MAX_SOURCES_PER_PUBLISHER);
+        when(mFlags.getMeasurementMaxTriggersPerDestination())
+                .thenReturn(Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION);
     }
 
     @Test
@@ -232,35 +235,52 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            List.of(
+                                    WebUtil.validUri("https://example.test/sF1"),
+                                    WebUtil.validUri("https://example.test/sF2")));
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue(null) // Should default to 1
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
         verify(mMeasurementDao, times(2)).insertAsyncRegistration(any(AsyncRegistration.class));
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(3, redirectCountCaptor.getValue().getRegistrationRedirectCount());
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
@@ -276,57 +296,66 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<Optional<Source>> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LIST_TYPE_REDIRECT_URI_1),
-                            Uri.parse(LIST_TYPE_REDIRECT_URI_2)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.NONE);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            List.of(
+                                    Uri.parse(LIST_TYPE_REDIRECT_URI_1),
+                                    Uri.parse(LIST_TYPE_REDIRECT_URI_2)));
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue(null) // Should default to 1
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
-        // Assert 'none' type redirect and values
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
-
         AsyncRegistration asyncReg1 = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LIST_TYPE_REDIRECT_URI_1), asyncReg1.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.NONE, asyncReg1.getRedirectType());
-        Assert.assertEquals(1, asyncReg1.getRedirectCount());
         assertEquals(
                 AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID,
                 asyncReg1.getRegistrationId());
-
         AsyncRegistration asyncReg2 = asyncRegistrationArgumentCaptor.getAllValues().get(1);
         Assert.assertEquals(Uri.parse(LIST_TYPE_REDIRECT_URI_2), asyncReg2.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.NONE, asyncReg2.getRedirectType());
-        Assert.assertEquals(1, asyncReg2.getRedirectCount());
         assertEquals(
                 AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID,
                 asyncReg2.getRegistrationId());
+
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(3, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
@@ -341,44 +370,56 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<Optional<Source>> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.DAISY_CHAIN);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LOCATION,
+                            List.of(Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue(null) // Should default to 1
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
-        // Assert 'location' type redirect and value
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.DAISY_CHAIN, asyncReg.getRedirectType());
-        Assert.assertEquals(1, asyncReg.getRedirectCount());
+
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(2, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
@@ -389,49 +430,59 @@ public class AsyncRegistrationQueueRunnerTest {
         // Setup
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
                 getSpyAsyncRegistrationQueueRunner();
-        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppSource(
-                AsyncRegistration.RedirectType.DAISY_CHAIN, 3);
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppSource();
         Answer<Optional<Source>> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.DAISY_CHAIN);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LOCATION,
+                            List.of(Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("5")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
-        // Assert 'location' type redirect and value
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.DAISY_CHAIN, asyncReg.getRedirectType());
-        Assert.assertEquals(4, asyncReg.getRedirectCount());
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(6, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
@@ -448,52 +499,62 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<Optional<Trigger>> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LIST_TYPE_REDIRECT_URI_1),
-                            Uri.parse(LIST_TYPE_REDIRECT_URI_2)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.NONE);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            List.of(
+                                    Uri.parse(LIST_TYPE_REDIRECT_URI_1),
+                                    Uri.parse(LIST_TYPE_REDIRECT_URI_2)));
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue(null) // Should default to 1
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
-        // Assert 'none' type redirect and values
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
 
         AsyncRegistration asyncReg1 = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LIST_TYPE_REDIRECT_URI_1), asyncReg1.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.NONE, asyncReg1.getRedirectType());
-        Assert.assertEquals(1, asyncReg1.getRedirectCount());
         Assert.assertEquals(
                 AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID,
                 asyncReg1.getRegistrationId());
 
         AsyncRegistration asyncReg2 = asyncRegistrationArgumentCaptor.getAllValues().get(1);
         Assert.assertEquals(Uri.parse(LIST_TYPE_REDIRECT_URI_2), asyncReg2.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.NONE, asyncReg2.getRedirectType());
-        Assert.assertEquals(1, asyncReg2.getRedirectCount());
         Assert.assertEquals(
                 AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID,
                 asyncReg2.getRegistrationId());
+
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(3, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
@@ -510,40 +571,51 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<Optional<Trigger>> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.DAISY_CHAIN);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LOCATION,
+                            List.of(Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue(null) // Should default to 1
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
-        // Assert 'location' type redirect and values
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
 
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.DAISY_CHAIN, asyncReg.getRedirectType());
-        Assert.assertEquals(1, asyncReg.getRedirectCount());
+
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(2, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
@@ -555,50 +627,172 @@ public class AsyncRegistrationQueueRunnerTest {
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
                 getSpyAsyncRegistrationQueueRunner();
 
-        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppTrigger(
-                AsyncRegistration.RedirectType.DAISY_CHAIN, 4);
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppTrigger();
 
         Answer<Optional<Trigger>> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
-                    asyncRedirect.setRedirectType(AsyncRegistration.RedirectType.DAISY_CHAIN);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LOCATION,
+                            List.of(Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("4")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
-
-        // Assert 'location' type redirect and values
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
-
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
-        Assert.assertEquals(AsyncRegistration.RedirectType.DAISY_CHAIN, asyncReg.getRedirectType());
-        Assert.assertEquals(5, asyncReg.getRedirectCount());
+        // Increment Redirect Count by 1
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(5, redirectCountCaptor.getValue().getRegistrationRedirectCount());
 
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
+    @Test
+    public void runAsyncRegistrationQueueWorker_appTrigger_nearMaxCount_addSomeRedirects()
+            throws DatastoreException {
+        // Setup
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                getSpyAsyncRegistrationQueueRunner();
+
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppTrigger();
+
+        Answer<Optional<Trigger>> answerAsyncTriggerFetcher =
+                invocation -> {
+                    AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            IntStream.range(1, 10)
+                                    .mapToObj((i) -> Uri.parse(LIST_TYPE_REDIRECT_URI_1 + "/" + i))
+                                    .collect(Collectors.toList()));
+                    return Optional.of(mMockedTrigger);
+                };
+        doAnswer(answerAsyncTriggerFetcher)
+                .when(mAsyncTriggerFetcher)
+                .fetchTrigger(any(), any(), any());
+
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
+                .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("15")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
+
+        // Execution
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
+
+        ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
+                ArgumentCaptor.forClass(AsyncRegistration.class);
+
+        // Assertions
+        verify(mAsyncTriggerFetcher, times(1))
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
+        verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
+        // Already has 15, only 5 out of the new 10 Uri should be added.
+        verify(mMeasurementDao, times(5))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
+        Assert.assertEquals(5, asyncRegistrationArgumentCaptor.getAllValues().size());
+        AtomicInteger i = new AtomicInteger(1);
+        asyncRegistrationArgumentCaptor
+                .getAllValues()
+                .forEach(
+                        (asyncRegistration -> {
+                            Assert.assertEquals(
+                                    Uri.parse(LIST_TYPE_REDIRECT_URI_1 + "/" + i.getAndIncrement()),
+                                    asyncRegistration.getRegistrationUri());
+                        }));
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(20, redirectCountCaptor.getValue().getRegistrationRedirectCount());
+        verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
+    }
+
+    @Test
+    public void runAsyncRegistrationQueueWorker_appTrigger_maxCount_addNoRedirects()
+            throws DatastoreException {
+        // Setup
+        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
+                getSpyAsyncRegistrationQueueRunner();
+
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForAppTrigger();
+
+        Answer<Optional<Trigger>> answerAsyncTriggerFetcher =
+                invocation -> {
+                    AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LOCATION,
+                            Collections.singletonList(Uri.parse(LOCATION_TYPE_REDIRECT_URI)));
+                    return Optional.of(mMockedTrigger);
+                };
+        doAnswer(answerAsyncTriggerFetcher)
+                .when(mAsyncTriggerFetcher)
+                .fetchTrigger(any(), any(), any());
+
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
+                .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("20")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
+
+        // Execution
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
+
+        // Assertions
+        verify(mAsyncTriggerFetcher, times(1))
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
+        verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
+        verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
+        // No insertions expected as redirectCount is already 20 (Max).
+        verify(mMeasurementDao, times(0)).insertAsyncRegistration(any());
+        verify(mMeasurementDao, never()).insertOrUpdateKeyValueData(any());
+    }
     // End tests for redirect types
 
     @Test
@@ -613,31 +807,35 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
+        verify(mMeasurementDao, never()).insertOrUpdateKeyValueData(any());
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
@@ -653,32 +851,32 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
-                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -705,32 +903,32 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
-                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -758,22 +956,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.PARSING_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, never()).updateRetryCount(any());
         verify(mMeasurementDao, never()).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, never()).insertSource(any(Source.class));
@@ -793,28 +992,44 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            List.of(
+                                    WebUtil.validUri("https://example.test/sF1"),
+                                    WebUtil.validUri("https://example.test/sF2")));
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("1")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
+
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
         verify(mMeasurementDao, times(2)).insertAsyncRegistration(any(AsyncRegistration.class));
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(3, redirectCountCaptor.getValue().getRegistrationRedirectCount());
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
@@ -830,24 +1045,25 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
+        verify(mMeasurementDao, never()).getKeyValueData(anyString(), any());
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
@@ -863,26 +1079,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
-                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -907,26 +1120,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
-                    AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -940,7 +1150,7 @@ public class AsyncRegistrationQueueRunnerTest {
     }
 
     @Test
-    public void test_runAsyncRegistrationQueueWorker_appTrigger_parsingError()
+    public void test_runAsyncRegistrationQueueWorker_appTrigger_parsingError_withRedirects()
             throws DatastoreException {
         // Setup
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
@@ -951,29 +1161,56 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.PARSING_ERROR);
                     AsyncRedirect asyncRedirect = invocation.getArgument(2);
-                    asyncRedirect.addToRedirects(List.of(
-                            WebUtil.validUri("https://example.test/sF1"),
-                            WebUtil.validUri("https://example.test/sF2")));
+                    asyncRedirect.addToRedirects(
+                            AsyncRegistration.RedirectType.LIST,
+                            List.of(
+                                    WebUtil.validUri("https://example.test/sF1"),
+                                    WebUtil.validUri("https://example.test/sF2")));
                     return Optional.empty();
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
+        KeyValueData redirectCount =
+                new KeyValueData.Builder()
+                        .setDataType(KeyValueData.DataType.REGISTRATION_REDIRECT_COUNT)
+                        .setKey(
+                                AsyncRegistrationFixture.ValidAsyncRegistrationParams
+                                        .REGISTRATION_ID)
+                        .setValue("1")
+                        .build();
+        when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, never()).updateRetryCount(any());
         verify(mMeasurementDao, never()).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
+        // Verifying redirect insertion
+        ArgumentCaptor<AsyncRegistration> argumentCaptor =
+                ArgumentCaptor.forClass(AsyncRegistration.class);
+        verify(mMeasurementDao, times(2)).insertAsyncRegistration(argumentCaptor.capture());
+        List<AsyncRegistration> redirects = argumentCaptor.getAllValues();
+        assertEquals(2, redirects.size());
+        assertEquals(
+                WebUtil.validUri("https://example.test/sF1"),
+                redirects.get(0).getRegistrationUri());
+        assertEquals(
+                WebUtil.validUri("https://example.test/sF2"),
+                redirects.get(1).getRegistrationUri());
+        ArgumentCaptor<KeyValueData> redirectCountCaptor =
+                ArgumentCaptor.forClass(KeyValueData.class);
+        verify(mMeasurementDao, times(1)).insertOrUpdateKeyValueData(redirectCountCaptor.capture());
+        assertEquals(3, redirectCountCaptor.getValue().getRegistrationRedirectCount());
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
 
@@ -988,27 +1225,30 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     return Optional.of(mMockedSource);
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
@@ -1027,28 +1267,32 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -1074,22 +1318,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -1115,28 +1360,32 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncSourceFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.PARSING_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncSourceFetcher)
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
-                .fetchSource(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, never()).updateRetryCount(any());
         verify(mMeasurementDao, never()).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, never()).insertSource(any(Source.class));
@@ -1151,27 +1400,27 @@ public class AsyncRegistrationQueueRunnerTest {
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
                 getSpyAsyncRegistrationQueueRunner();
 
-        AsyncRegistration validAsyncRegistration =  createAsyncRegistrationForWebTrigger();
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForWebTrigger();
 
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
                     return Optional.of(mMockedTrigger);
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
@@ -1189,22 +1438,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -1229,22 +1479,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
+                    asyncFetchStatus.setResponseStatus(
+                            AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
         verify(mMeasurementDao, times(1))
@@ -1269,22 +1520,23 @@ public class AsyncRegistrationQueueRunnerTest {
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
                     AsyncFetchStatus asyncFetchStatus = invocation.getArgument(1);
-                    asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
+                    asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+                    asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.PARSING_ERROR);
                     return Optional.empty();
                 };
         doAnswer(answerAsyncTriggerFetcher)
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
-                .fetchTrigger(any(AsyncRegistration.class), any(AsyncFetchStatus.class), any());
+                .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, never()).updateRetryCount(any());
         verify(mMeasurementDao, never()).insertTrigger(any(Trigger.class));
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
@@ -1504,7 +1756,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1541,7 +1792,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1580,7 +1830,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1611,7 +1860,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
         // Execution
@@ -1649,7 +1897,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1688,7 +1935,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1726,7 +1972,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
         doReturn((long) SystemHealthParams.getMaxSourcesPerPublisher())
@@ -1756,7 +2001,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1786,7 +2030,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mAsyncSourceFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 new FakeDatastoreManager(),
                                 mDebugReportApi));
 
@@ -1801,9 +2044,8 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Test
     public void testRegisterTrigger_atSystemHealthLimits_success() throws Exception {
-        // Setup
         when(mMeasurementDao.getNumTriggersPerDestination(APP_DESTINATION, EventSurfaceType.APP))
-                .thenReturn(MAX_TRIGGER_REGISTERS_PER_DESTINATION - 1L);
+                .thenReturn(Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION - 1L);
 
         Truth.assertThat(
                         AsyncRegistrationQueueRunner.isTriggerAllowedToInsert(
@@ -1813,19 +2055,8 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Test
     public void testRegisterTrigger_overSystemHealthLimits_failure() throws Exception {
-        // Setup
-        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
-                spy(
-                        new AsyncRegistrationQueueRunner(
-                                mContentResolver,
-                                mAsyncSourceFetcher,
-                                mAsyncTriggerFetcher,
-                                mEnrollmentDao,
-                                new FakeDatastoreManager(),
-                                mDebugReportApi));
-
         when(mMeasurementDao.getNumTriggersPerDestination(APP_DESTINATION, EventSurfaceType.APP))
-                .thenReturn(MAX_TRIGGER_REGISTERS_PER_DESTINATION);
+                .thenReturn((long) Flags.MEASUREMENT_MAX_TRIGGERS_PER_DESTINATION);
 
         Truth.assertThat(
                         AsyncRegistrationQueueRunner.isTriggerAllowedToInsert(
@@ -1834,131 +2065,11 @@ public class AsyncRegistrationQueueRunnerTest {
     }
 
     @Test
-    public void testRegisterAppSource_redirectOverridesOsButNotWebDestination()
-            throws DatastoreException, IOException {
-        // Setup
-        RegistrationRequest request = buildRequest(DEFAULT_REGISTRATION);
-        AsyncSourceFetcher mFetcher = spy(new AsyncSourceFetcher(mEnrollmentDao, mFlags, mLogger));
-        doReturn(mUrlConnection1).when(mFetcher).openUrl(new URL(DEFAULT_REGISTRATION));
-        doReturn(mUrlConnection2).when(mFetcher).openUrl(new URL("https://foo-redirect.test"));
-        when(mUrlConnection1.getResponseCode()).thenReturn(200);
-        when(mUrlConnection2.getResponseCode()).thenReturn(200);
-        when(mUrlConnection1.getHeaderFields())
-                .thenReturn(
-                        Map.of(
-                                "Attribution-Reporting-Register-Source",
-                                List.of(
-                                        "{\n"
-                                                + "  \"priority\": \"123\",\n"
-                                                + "  \"expiry\": \"456789\",\n"
-                                                + "  \"source_event_id\": \"987654321\",\n"
-                                                + "  \"destination\": \""
-                                                + DEFAULT_OS_DESTINATION
-                                                + "\",\n"
-                                                + "\"web_destination\": \""
-                                                + DEFAULT_WEB_DESTINATION
-                                                + "\""
-                                                + "}"),
-                                "Attribution-Reporting-Redirect",
-                                List.of("https://foo-redirect.test")));
-        when(mUrlConnection2.getHeaderFields())
-                .thenReturn(
-                        Map.of(
-                                "Attribution-Reporting-Register-Source",
-                                List.of(
-                                        "{\n"
-                                                + "  \"priority\": \"321\",\n"
-                                                + "  \"expiry\": \"987654\",\n"
-                                                + "  \"source_event_id\": \"123456789\",\n"
-                                                + "  \"destination\": \""
-                                                + ALT_APP_DESTINATION
-                                                + "\",\n"
-                                                + "\"web_destination\": \""
-                                                + ALT_WEB_DESTINATION
-                                                + "\""
-                                                + "}")));
-        DatastoreManager datastoreManager =
-                spy(new SQLDatastoreManager(DbTestUtil.getMeasurementDbHelperForTest()));
-        AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
-                spy(
-                        new AsyncRegistrationQueueRunner(
-                                mContentResolver,
-                                mFetcher,
-                                mAsyncTriggerFetcher,
-                                mEnrollmentDao,
-                                datastoreManager,
-                                mDebugReportApi));
-        ArgumentCaptor<DatastoreManager.ThrowingCheckedConsumer> consumerArgCaptor =
-                ArgumentCaptor.forClass(DatastoreManager.ThrowingCheckedConsumer.class);
-        EnqueueAsyncRegistration.appSourceOrTriggerRegistrationRequest(
-                request,
-                /* adIdPermission */ true,
-                APP_TOP_ORIGIN,
-                /* requestTime */ 100,
-                Source.SourceType.NAVIGATION,
-                mEnrollmentDao,
-                datastoreManager);
-
-        // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(2L, (short) 5);
-
-        // Assertion
-        verify(datastoreManager, times(3)).runInTransaction(consumerArgCaptor.capture());
-        consumerArgCaptor.getValue().accept(mMeasurementDao);
-
-        String sourceId1;
-        String sourceId2;
-        try (Cursor cursor =
-                DbTestUtil.getMeasurementDbHelperForTest()
-                        .getReadableDatabase()
-                        .query(
-                                MeasurementTables.SourceContract.TABLE,
-                                null,
-                                null,
-                                null,
-                                null,
-                                null,
-                                null)) {
-            Assert.assertTrue(cursor.moveToNext());
-            sourceId1 = cursor.getString(cursor.getColumnIndex(
-                    MeasurementTables.SourceContract.ID));
-            Assert.assertTrue(cursor.moveToNext());
-            sourceId2 = cursor.getString(cursor.getColumnIndex(
-                    MeasurementTables.SourceContract.ID));
-        }
-
-        // Assert insertion to source and source destination table
-
-        Source source1 = datastoreManager.runInTransactionWithResult(
-                measurementDao -> measurementDao.getSource(sourceId1)).get();
-
-        assertEquals(new UnsignedLong(987654321L), source1.getEventId());
-
-        Pair<List<Uri>, List<Uri>> destinations1 = datastoreManager.runInTransactionWithResult(
-                measurementDao -> measurementDao.getSourceDestinations(source1.getId())).get();
-        assertEquals(1, destinations1.first.size());
-        assertEquals(DEFAULT_OS_DESTINATION, destinations1.first.get(0));
-        assertEquals(1, destinations1.second.size());
-        assertEquals(DEFAULT_WEB_DESTINATION, destinations1.second.get(0));
-
-        Source source2 = datastoreManager.runInTransactionWithResult(
-                measurementDao -> measurementDao.getSource(sourceId2)).get();
-
-        assertEquals(new UnsignedLong(123456789L), source2.getEventId());
-
-        Pair<List<Uri>, List<Uri>> destinations2 = datastoreManager.runInTransactionWithResult(
-                measurementDao -> measurementDao.getSourceDestinations(source2.getId())).get();
-        assertEquals(1, destinations2.first.size());
-        assertEquals(DEFAULT_OS_DESTINATION, destinations2.first.get(0));
-        assertEquals(1, destinations2.second.size());
-        assertEquals(ALT_WEB_DESTINATION, destinations2.second.get(0));
-    }
-
-    @Test
     public void testRegisterWebSource_failsWebAndOsDestinationVerification()
             throws DatastoreException, IOException {
         // Setup
-        AsyncSourceFetcher mFetcher = spy(new AsyncSourceFetcher(mEnrollmentDao, mFlags, mLogger));
+        AsyncSourceFetcher mFetcher =
+                spy(new AsyncSourceFetcher(sDefaultContext, mEnrollmentDao, mFlags, mLogger));
         WebSourceRegistrationRequest request =
                 buildWebSourceRegistrationRequest(
                         Collections.singletonList(DEFAULT_REGISTRATION_PARAM_LIST),
@@ -1991,7 +2102,6 @@ public class AsyncRegistrationQueueRunnerTest {
                                 mContentResolver,
                                 mFetcher,
                                 mAsyncTriggerFetcher,
-                                mEnrollmentDao,
                                 datastoreManager,
                                 mDebugReportApi));
         ArgumentCaptor<DatastoreManager.ThrowingCheckedConsumer> consumerArgCaptor =
@@ -2002,11 +2112,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 APP_TOP_ORIGIN,
                 100,
                 Source.SourceType.NAVIGATION,
-                mEnrollmentDao,
-                datastoreManager);
+                datastoreManager,
+                mContentResolver);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(2L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertion
         verify(datastoreManager, times(2)).runInTransaction(consumerArgCaptor.capture());
@@ -2062,27 +2172,18 @@ public class AsyncRegistrationQueueRunnerTest {
     }
 
     private static AsyncRegistration createAsyncRegistrationForAppSource() {
-        return createAsyncRegistrationForAppSource(AsyncRegistration.RedirectType.ANY, 0);
-    }
-
-    private static AsyncRegistration createAsyncRegistrationForAppSource(
-            @AsyncRegistration.RedirectType int redirectType, int redirectCount) {
         return new AsyncRegistration.Builder()
                 .setId(UUID.randomUUID().toString())
-                .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
                 .setRegistrationUri(REGISTRATION_URI)
                 // null .setWebDestination(webDestination)
                 // null .setOsDestination(osDestination)
                 .setRegistrant(DEFAULT_REGISTRANT)
                 // null .setVerifiedDestination(null)
                 .setTopOrigin(APP_TOP_ORIGIN)
-                .setType(AsyncRegistration.RegistrationType.APP_SOURCE.ordinal())
+                .setType(AsyncRegistration.RegistrationType.APP_SOURCE)
                 .setSourceType(Source.SourceType.EVENT)
                 .setRequestTime(System.currentTimeMillis())
                 .setRetryCount(0)
-                .setLastProcessingTime(System.currentTimeMillis())
-                .setRedirectType(redirectType)
-                .setRedirectCount(redirectCount)
                 .setDebugKeyAllowed(true)
                 .setRegistrationId(
                         AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID)
@@ -2090,27 +2191,18 @@ public class AsyncRegistrationQueueRunnerTest {
     }
 
     private static AsyncRegistration createAsyncRegistrationForAppTrigger() {
-        return createAsyncRegistrationForAppTrigger(AsyncRegistration.RedirectType.ANY, 0);
-    }
-
-    private static AsyncRegistration createAsyncRegistrationForAppTrigger(
-            @AsyncRegistration.RedirectType int redirectType, int redirectCount) {
         return new AsyncRegistration.Builder()
                 .setId(UUID.randomUUID().toString())
-                .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
                 .setRegistrationUri(REGISTRATION_URI)
                 // null .setWebDestination(webDestination)
                 // null .setOsDestination(osDestination)
                 .setRegistrant(DEFAULT_REGISTRANT)
                 // null .setVerifiedDestination(null)
                 .setTopOrigin(APP_TOP_ORIGIN)
-                .setType(AsyncRegistration.RegistrationType.APP_TRIGGER.ordinal())
+                .setType(AsyncRegistration.RegistrationType.APP_TRIGGER)
                 // null .setSourceType(null)
                 .setRequestTime(System.currentTimeMillis())
                 .setRetryCount(0)
-                .setLastProcessingTime(System.currentTimeMillis())
-                .setRedirectType(redirectType)
-                .setRedirectCount(redirectCount)
                 .setDebugKeyAllowed(true)
                 .setRegistrationId(
                         AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID)
@@ -2120,40 +2212,38 @@ public class AsyncRegistrationQueueRunnerTest {
     private static AsyncRegistration createAsyncRegistrationForWebSource() {
         return new AsyncRegistration.Builder()
                 .setId(UUID.randomUUID().toString())
-                .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
                 .setRegistrationUri(REGISTRATION_URI)
                 .setWebDestination(WEB_DESTINATION)
                 .setOsDestination(APP_DESTINATION)
                 .setRegistrant(DEFAULT_REGISTRANT)
                 .setVerifiedDestination(DEFAULT_VERIFIED_DESTINATION)
                 .setTopOrigin(WEB_TOP_ORIGIN)
-                .setType(AsyncRegistration.RegistrationType.WEB_SOURCE.ordinal())
+                .setType(AsyncRegistration.RegistrationType.WEB_SOURCE)
                 .setSourceType(Source.SourceType.EVENT)
                 .setRequestTime(System.currentTimeMillis())
                 .setRetryCount(0)
-                .setLastProcessingTime(System.currentTimeMillis())
-                .setRedirectType(AsyncRegistration.RedirectType.NONE)
                 .setDebugKeyAllowed(true)
+                .setRegistrationId(
+                        AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID)
                 .build();
     }
 
     private static AsyncRegistration createAsyncRegistrationForWebTrigger() {
         return new AsyncRegistration.Builder()
                 .setId(UUID.randomUUID().toString())
-                .setEnrollmentId(DEFAULT_ENROLLMENT_ID)
                 .setRegistrationUri(REGISTRATION_URI)
                 // null .setWebDestination(webDestination)
                 // null .setOsDestination(osDestination)
                 .setRegistrant(DEFAULT_REGISTRANT)
                 // null .setVerifiedDestination(null)
                 .setTopOrigin(WEB_TOP_ORIGIN)
-                .setType(AsyncRegistration.RegistrationType.WEB_TRIGGER.ordinal())
+                .setType(AsyncRegistration.RegistrationType.WEB_TRIGGER)
                 // null .setSourceType(null)
                 .setRequestTime(System.currentTimeMillis())
                 .setRetryCount(0)
-                .setLastProcessingTime(System.currentTimeMillis())
-                .setRedirectType(AsyncRegistration.RedirectType.NONE)
                 .setDebugKeyAllowed(true)
+                .setRegistrationId(
+                        AsyncRegistrationFixture.ValidAsyncRegistrationParams.REGISTRATION_ID)
                 .build();
     }
 
@@ -2163,7 +2253,6 @@ public class AsyncRegistrationQueueRunnerTest {
                         mContentResolver,
                         mAsyncSourceFetcher,
                         mAsyncTriggerFetcher,
-                        mEnrollmentDao,
                         new FakeDatastoreManager(),
                         mDebugReportApi));
     }
